force-app/main/default/objects/Deal_Action__c/Deal_Action__c.object-meta.xml
<CustomObject>
    <label>Deal Action</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>