force-app/main/default/objects/Deal_Action__c/fields/Disable_Status__c.field-meta.xml
<CustomField>
    <fullName>Disable_Status__c</fullName>
    <formula>IF( ISPICKVAL(Action__c , &apos;Available&apos;) , &apos;false&apos;, &apos;true&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable Status</label>
    <type>Text</type>
</CustomField>