force-app/main/default/objects/Deal_Action__c/listViews/Deatil.listView-meta.xml
<ListView>
    <fullName>Deatil</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Action__c</columns>
    <columns>Contact__c</columns>
    <columns>Disable_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Deatil</label>
</ListView>